# btc-module-relay-nxc-impckt-rspnd

./: .gitignore  DEPLOY.md  LAB_SETUP.md  README.md  config.yaml  pyproject.toml
docker/: docker-compose.yml
docker/impacket/: Dockerfile
docker/netexec/: Dockerfile
docker/responder/: Dockerfile
src/btc_module_relay_nxc_impckt_rspndr/: __init__.py  config.py  logger.py  main.py
src/btc_module_relay_nxc_impckt_rspndr/controller/: ntlmrelayx_ctrl.py  nxc_ctrl.py  responder_ctrl.py
src/btc_module_relay_nxc_impckt_rspndr/parser/: nxc_output.py
src/btc_module_relay_nxc_impckt_rspndr/pipeline/: coerce.py  post_auth.py
src/btc_module_relay_nxc_impckt_rspndr/utils/: docker_helpers.py
src/btc_relay_module_nxc_impckt/: logger.py  main.py  session.py
src/btc_relay_module_nxc_impckt/controller/: ntlmrelayx_ctrl.py  nxc_ctrl.py  responder_ctrl.py
src/btc_relay_module_nxc_impckt/parser/: nxc_output.py
src/btc_relay_module_nxc_impckt/pipeline/: coerce.py  post_auth.py
src/btc_relay_module_nxc_impckt/utils/: docker_helpers.py
tests/: test_integration.py
